# jupyter-popup

./: .gitignore  README.md  setup.cfg
.ipynb_checkpoints/: README-checkpoint.md  setup-checkpoint.cfg
jupyter-popup/: popup.py
jupyter-popup/.ipynb_checkpoints/: __init__-checkpoint.py
jupyter_popup/: __init__.py
jupyter_popup/.ipynb_checkpoints/: __init__-checkpoint.py  popup-checkpoint.py
