[metadata]
name = jupyter-popup
version = 0.1.0
author = Laurent-Philippe Albou
author_email = lpalbou@gmail.com
description = A reliable popup/modal solution for Jupyter notebooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lpalbou/jupyter-popup
project_urls =
    Bug Tracker = https://github.com/lpalbou/jupyter-popup/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Jupyter
    Framework :: IPython
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Visualization

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    ipython>=7.0.0

[options.packages.find]
where = .